refactoring and documentation

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
 
 	<div>
-		<input id="notEncodedText" type="name" name="" placeholder="Enter text">
-		<input id="keyInput" type="name" name="" placeholder="Enter encode key">
-		<button id="buttonEnc">Encrypt</button>
+		<input id="unencoded-text" type="name" name="" placeholder="Enter text">
+		<input id="key-input" type="name" name="" placeholder="Enter encode key">
+		<button id="button-enc">Encrypt</button>
 
 		<div id="result"> </div>
 
