enc/dec using encode table

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<div>
 		<input id="notEncodedText" type="name" name="" placeholder="Enter text">
 		<input id="keyInput" type="name" name="" placeholder="Enter encode key">
+		
 		<button id="buttonEnc">Encrypt</button>
+		<button id="buttonDec">Decrypt</button>
 
 		<div id="result"> </div>
 
