--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<button id="button-dec">Decrypt</button>
 		</div>
 
-		<div id="result">Result will be here...</div>
+		<div id="error-message"></div>
 	</div>
 
 <script type="text/javascript" src="index.js"></script>
