--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
 <head>
 	<title>Encoder</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style/style.css">
+	<link rel="stylesheet" type="text/css" href="style/toastr.min.css">
 </head>
 <body>
 
-	<div>
-		<input id="key-input" type="name" name="" placeholder="Enter encode key">
+
+	<div class="app-container">
+
+		<div class="app-title"> Offset Encoder </div>
+
+
+		<div class="key-in-container">
+			<input id="key-input" type="name" name="" placeholder="Enter encode key">
+		</div>
 
 		<div class="source-text-container">
 			<input id="not-encoded-text" type="name" name="" placeholder="Enter source text">
@@ -20,8 +28,11 @@
 		</div>
 
 		<div id="error-message"></div>
+
 	</div>
 
+<script type="text/javascript" src="lib/jquery.min.js"></script>
+<script type="text/javascript" src="lib/toastr.min.js"></script>
 <script type="text/javascript" src="index.js"></script>
 </body>
 
